--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build with Vite
-        run: npm run build
+        run: npm run build-pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
