--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "build-pages": "vite build --base /mplace/"
   },
   "author": "WasabiThumb",
   "license": "Apache-2.0",
